# stawberry-studio

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTIC_CONSOLE_REDESIGN.md  HANDOFF.md  Makefile  QUICK_START.md  README.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
backend/: config.py  db.py  db_async.py  errors.py  main.py  models.py
backend/agents/: __init__.py  analyst.py  architect.py  berry.py  berry_v2.py  detailer.py  element_generator.py  planner.py  pre_production.py  prompter.py  qa.py  renderer.py  story_architect_v2.py
backend/agents/prompts/: atlas.md  berry.md  iris.md  nova.md  pixel.md  sage.md  scout.md  spark.md
backend/agents/specs/: atlas.yaml  berry.yaml  iris.yaml  nova.yaml  pixel.yaml  sage.yaml  scout.yaml  spark.yaml
backend/database/: assets.py  blueprint.py  core.py  history.py  models.py  scenes.py  schema_elements.sql  schema_v2.sql  shots.py
backend/database/migrations/: 001_initial.sql  002_agent_events.sql  003_pipeline_phases.sql  004_reference_pool_continuity.sql  005_element_sheets.sql  006_asset_dag.sql  007_references_first.sql  008_drop_legacy_sheets.sql  009_console_foundation.sql  010_plan_payload.sql  011_console_events.sql  012_cut_chain_from_prev.sql  013_style_bible.sql  014_asset_inspired_by.sql  __init__.py
backend/intelligence/: __init__.py  inference_engine.py
backend/orchestrator/: __init__.py  agent_spec.py  asset_bundler.py  bus.py  chat_bridge.py  context_bundler.py  continuity.py  critic.py  cut_composer.py  cut_executor.py  cut_planner.py  events.py  gen_stats.py  identity_traits.py  intents.py  iris.py  llm_cost.py  narrator.py  picker.py  picker_v2.py  pipeline.py  plans.py  prompt_dsl.py  references.py  references_v2.py  runner.py  sheet_cells.py  sheet_generator.py  sheet_planner.py  style_anchor.py  style_bible.py  turn_ordering.py  vision_critic.py
backend/providers/: __init__.py  base.py  registry.py
backend/providers/image/: __init__.py  _storage.py  fal.py  gemini.py
backend/providers/llm/: __init__.py  anthropic.py  gemini.py  openai.py
backend/routes/: assets.py  batch.py  chat.py  cuts.py  elements.py  library.py  pipeline.py  projects.py  repair.py
backend/services/: gemini_image.py  generation_queue.py
backend/tools/: __init__.py  assets.py  blueprint.py  blueprint_v2.py  briefing.py  briefing_v2.py  element_generation.py  generation.py  handoff.py  navigation.py  phase_confirmation.py  pre_production.py  registry.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  generated.ts
frontend/src/components/: PhaseRail.css  PhaseRail.tsx  RepairMenu.css  RepairMenu.tsx
frontend/src/components/assets/: AssetPanel.css  AssetPanel.tsx  index.ts
frontend/src/components/canvas/: AssetGroupNode.tsx  AssetMasterNode.tsx  BriefNode.tsx  ComposeProgress.tsx  CutNode.tsx  ImageGeneratorNode.tsx  NodeProperties.css  NodeProperties.tsx  SceneNode.tsx  ShotNode.tsx  index.ts  nodes.css
frontend/src/components/chat/: FloatingChat.css  FloatingChat.tsx  ProgressCard.css  ProgressCard.tsx  TimelinePills.css  index.ts  (+1 more)
frontend/src/hooks/: useGenerationPoll.ts  useProjectWebSocket.ts
frontend/src/pages/: Canvas.css  Canvas.tsx  Chat.css  Chat.tsx  Elements.css  Elements.tsx  ElementsNew.css  ElementsNew.tsx  ProjectLayout.css  ProjectLayout.tsx  ProjectList.css  ProjectList.tsx
frontend/src/services/: assetBusy.ts  elements.ts  storyboard.ts
frontend/src/stores/: projectStore.ts
tests/: conftest.py
(+35 files in other folders)
