[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strawberry-studio"
version = "3.0.0"
description = "Visual AI storyboarding tool with agentic pipelines"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "venv*", "storage*", "tests*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "venv",
    "frontend",
    "storage",
    "backend/database/migrations",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]
markers = [
    "live: tests that hit real LLM/image providers (expensive)",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["venv/", "frontend/", "storage/", "backend/database/migrations/"]
files = ["backend/models.py", "backend/providers", "backend/orchestrator", "backend/errors.py"]
